# aphid_spatial

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
notebooks/: 01_simulation.ipynb  02_exploration.ipynb  03_geostatistics.ipynb  04_lattice_mrf.ipynb  05_hierarchical_bayes.ipynb  06_ml_methods.ipynb  07_comparison.ipynb
src/aphid_spatial/: __init__.py
src/aphid_spatial/evaluation/: __init__.py  metrics.py
src/aphid_spatial/methods/: __init__.py  autocorrelation.py  exploration.py  geostatistics.py  gp.py  hierarchical.py  lattice.py  ml.py  point_process.py  sadie.py
src/aphid_spatial/simulation/: __init__.py  field.py  sensors.py
src/aphid_spatial/visualization/: __init__.py  maps.py
tests/: test_methods.py  test_metrics.py  test_sensors.py  test_simulation.py
